--- a/MyPad/Views/Regions/ToolBarView.xaml
+++ b/MyPad/Views/Regions/ToolBarView.xaml
@@ -146,15 +146,15 @@
 
         <Separator Margin="5"/>
 
-        <ToggleButton IsChecked="{Binding SettingsService.TextEditor.ShowColumnRuler, Mode=TwoWay}"
+        <ToggleButton IsChecked="{Binding Settings.TextEditor.ShowColumnRuler, Mode=TwoWay}"
                       ToolTip="{le:Loc LabelText_ShowColumnRuler}">
             <mi:Material Kind="FlipHorizontal"/>
         </ToggleButton>
-        <ToggleButton IsChecked="{Binding SettingsService.TextEditor.WordWrap, Mode=TwoWay}"
+        <ToggleButton IsChecked="{Binding Settings.TextEditor.WordWrap, Mode=TwoWay}"
                       ToolTip="{le:Loc LabelText_EnableWordWrap}">
             <mi:Material Kind="FormatTextWrappingWrap"/>
         </ToggleButton>
-        <ToggleButton IsChecked="{Binding SettingsService.TextEditor.ConvertTabsToSpaces, Mode=TwoWay}"
+        <ToggleButton IsChecked="{Binding Settings.TextEditor.ConvertTabsToSpaces, Mode=TwoWay}"
                       ToolTip="{le:Loc LabelText_ConvertTabsToSpaces}">
             <mi:Material Kind="KeyboardSpace"/>
         </ToggleButton>
