--- a/MyPad/Views/Styles/Controls/MarkDig.xaml
+++ b/MyPad/Views/Styles/Controls/MarkDig.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:md="clr-namespace:Markdig.Wpf;assembly=Markdig.Wpf">
+                    xmlns:mw="clr-namespace:Markdig.Wpf;assembly=Markdig.Wpf">
 
     <FontFamily x:Key="MarkDig.Fonts.Family">Consolas, Lucida Sans Typewriter, Courier New</FontFamily>
     
@@ -8,74 +8,74 @@
         <TextDecoration Location="Underline" PenOffset="3"/>
     </TextDecorationCollection>
 
-    <Style x:Key="{x:Static md:Styles.CodeStyleKey}" TargetType="{x:Type Run}">
+    <Style x:Key="{x:Static mw:Styles.CodeStyleKey}" TargetType="{x:Type Run}">
         <Setter Property="Background" Value="{DynamicResource MahApps.Brushes.Gray10}"/>
         <Setter Property="FontFamily" Value="{StaticResource MarkDig.Fonts.Family}"/>
     </Style>
     
-    <Style x:Key="{x:Static md:Styles.CodeBlockStyleKey}" TargetType="{x:Type Paragraph}">
+    <Style x:Key="{x:Static mw:Styles.CodeBlockStyleKey}" TargetType="{x:Type Paragraph}">
         <Setter Property="Background" Value="{DynamicResource MahApps.Brushes.Gray10}"/>
         <Setter Property="FontFamily" Value="{StaticResource MarkDig.Fonts.Family}"/>
     </Style>
     
-    <Style x:Key="{x:Static md:Styles.Heading1StyleKey}" TargetType="{x:Type Paragraph}">
+    <Style x:Key="{x:Static mw:Styles.Heading1StyleKey}" TargetType="{x:Type Paragraph}">
         <Setter Property="FontSize"   Value="32"/>
         <Setter Property="FontWeight" Value="Bold"/>
     </Style>
     
-    <Style x:Key="{x:Static md:Styles.Heading2StyleKey}" TargetType="{x:Type Paragraph}">
+    <Style x:Key="{x:Static mw:Styles.Heading2StyleKey}" TargetType="{x:Type Paragraph}">
         <Setter Property="FontSize"   Value="26"/>
         <Setter Property="FontWeight" Value="Bold"/>
     </Style>
     
-    <Style x:Key="{x:Static md:Styles.Heading3StyleKey}" TargetType="{x:Type Paragraph}">
+    <Style x:Key="{x:Static mw:Styles.Heading3StyleKey}" TargetType="{x:Type Paragraph}">
         <Setter Property="FontSize"   Value="20"/>
         <Setter Property="FontWeight" Value="Bold"/>
     </Style>
     
-    <Style x:Key="{x:Static md:Styles.Heading4StyleKey}" TargetType="{x:Type Paragraph}">
+    <Style x:Key="{x:Static mw:Styles.Heading4StyleKey}" TargetType="{x:Type Paragraph}">
         <Setter Property="FontSize"   Value="18"/>
         <Setter Property="FontWeight" Value="Bold"/>
     </Style>
     
-    <Style x:Key="{x:Static md:Styles.Heading5StyleKey}" TargetType="{x:Type Paragraph}">
+    <Style x:Key="{x:Static mw:Styles.Heading5StyleKey}" TargetType="{x:Type Paragraph}">
         <Setter Property="FontSize"   Value="16"/>
         <Setter Property="FontWeight" Value="Bold"/>
     </Style>
     
-    <Style x:Key="{x:Static md:Styles.Heading6StyleKey}" TargetType="{x:Type Paragraph}">
+    <Style x:Key="{x:Static mw:Styles.Heading6StyleKey}" TargetType="{x:Type Paragraph}">
         <Setter Property="FontSize"   Value="14"/>
         <Setter Property="FontWeight" Value="Bold"/>
     </Style>
 
-    <Style x:Key="{x:Static md:Styles.HyperlinkStyleKey}" TargetType="{x:Type Hyperlink}">
+    <Style x:Key="{x:Static mw:Styles.HyperlinkStyleKey}" TargetType="{x:Type Hyperlink}">
         <Setter Property="Foreground" Value="{DynamicResource MahApps.Brushes.AccentBase}"/>
     </Style>
 
-    <Style x:Key="{x:Static md:Styles.QuoteBlockStyleKey}" TargetType="{x:Type Section}">
+    <Style x:Key="{x:Static mw:Styles.QuoteBlockStyleKey}" TargetType="{x:Type Section}">
         <Setter Property="Foreground"      Value="{DynamicResource MahApps.Brushes.Gray1}"/>
         <Setter Property="BorderBrush"     Value="{DynamicResource MahApps.Brushes.Gray10}"/>
         <Setter Property="BorderThickness" Value="4 0 0 0"/>
         <Setter Property="Padding"         Value="16 0 0 0"/>
     </Style>
 
-    <Style x:Key="{x:Static md:Styles.TableStyleKey}" TargetType="{x:Type Table}">
+    <Style x:Key="{x:Static mw:Styles.TableStyleKey}" TargetType="{x:Type Table}">
         <Setter Property="BorderBrush"     Value="{DynamicResource MahApps.Brushes.Control.Border}"/>
         <Setter Property="BorderThickness" Value="0 0 1 1"/>
         <Setter Property="CellSpacing"     Value="0"/>
     </Style>
     
-    <Style x:Key="{x:Static md:Styles.TableCellStyleKey}" TargetType="{x:Type TableCell}">
+    <Style x:Key="{x:Static mw:Styles.TableCellStyleKey}" TargetType="{x:Type TableCell}">
         <Setter Property="BorderBrush"     Value="{DynamicResource MahApps.Brushes.Control.Border}"/>
         <Setter Property="BorderThickness" Value="1 1 0 0"/>
         <Setter Property="Padding"         Value="5"/>
     </Style>
     
-    <Style x:Key="{x:Static md:Styles.ThematicBreakStyleKey}" TargetType="{x:Type Line}">
+    <Style x:Key="{x:Static mw:Styles.ThematicBreakStyleKey}" TargetType="{x:Type Line}">
         <Setter Property="Stretch" Value="Fill"/>
     </Style>
     
-    <Style x:Key="{x:Static md:Styles.MarkedStyleKey}" TargetType="{x:Type Span}">
+    <Style x:Key="{x:Static mw:Styles.MarkedStyleKey}" TargetType="{x:Type Span}">
     </Style>
 
 </ResourceDictionary>
