--- a/MyPad/Views/Regions/AboutContentView.xaml
+++ b/MyPad/Views/Regions/AboutContentView.xaml
@@ -14,6 +14,7 @@
              xmlns:root="clr-namespace:MyPad"
              xmlns:behaviors="clr-namespace:MyPad.Views.Behaviors"
              xmlns:controls="clr-namespace:MyPad.Views.Controls"
+             xmlns:helpers="clr-namespace:MyPad.Views.Helpers"
              mc:Ignorable="d" 
              p:ViewModelLocator.AutoWireViewModel="True"
              d:DesignHeight="450" d:DesignWidth="800">
@@ -26,14 +27,15 @@
 
     <Grid ge:GridEx.RowDefinition="Auto, 15, Auto, 15, *, 20">
         <ScrollViewer Grid.Row="0" Margin="40 0" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Hidden">
-            <Grid ge:GridEx.ColumnDefinition="Auto, 15, Auto, 20, Auto, 15, Auto, 15, Auto">
-                <TextBlock Grid.Column="0" Text="{Binding ProductInfo.Product, Mode=OneWay}" FontWeight="Bold" FontSize="32" VerticalAlignment="Center"/>
-                <TextBlock Grid.Column="2" TextWrapping="Wrap" VerticalAlignment="Center">
+            <Grid ge:GridEx.ColumnDefinition="Auto, 15, Auto, 15, Auto, 30, Auto, 15, Auto, 15, Auto">
+                <Image     Grid.Column="0" Source="{helpers:IconSource /Resources/app.ico}" Width="40" VerticalAlignment="Center"/>
+                <TextBlock Grid.Column="2" Text="{Binding ProductInfo.Product, Mode=OneWay}" FontWeight="Bold" FontSize="32" Margin="0 0 0 5" VerticalAlignment="Center"/>
+                <TextBlock Grid.Column="4" TextWrapping="Wrap" VerticalAlignment="Center">
                     <Run Text="{qc:MultiBinding '\'Version \' + $P0.Major + \'.\' + $P0.Minor + \'.\' + $P0.Build + ($P1 ? \' - Debug Build\' : null)', P0={Binding ProductInfo.Version, Mode=OneWay}, P1={Binding ProductInfo.IsDebugBuild, Mode=OneWay}}"/>
                     <LineBreak/>
                     <Run Text="{Binding ProductInfo.Copyright, Mode=OneWay}"/>
                 </TextBlock>
-                <Button Grid.Column="4" Style="{StaticResource Common.CircleButton}" ToolTip="{le:Loc Command_Repository}" VerticalAlignment="Center" IsTabStop="False">
+                <Button Grid.Column="6" Style="{StaticResource Common.CircleButton}" ToolTip="{le:Loc Command_Repository}" VerticalAlignment="Center" IsTabStop="False">
                     <i:Interaction.Triggers>
                         <i:EventTrigger EventName="Click">
                             <behaviors:ProcessStartAction FileName="cmd.exe" Arguments="{qc:Binding '\'/c start \' + $P', P={Binding Source={x:Static root:AppSettingsReader.ProjectSite}, Mode=OneWay}}" CreateNoWindow="True" ThrowException="False"/>
@@ -41,7 +43,7 @@
                     </i:Interaction.Triggers>
                     <mi:Material Kind="Github"/>
                 </Button>
-                <Button Grid.Column="6" Style="{StaticResource Common.CircleButton}" ToolTip="{le:Loc Command_Creator}" VerticalAlignment="Center" IsTabStop="False">
+                <Button Grid.Column="8" Style="{StaticResource Common.CircleButton}" ToolTip="{le:Loc Command_Creator}" VerticalAlignment="Center" IsTabStop="False">
                     <i:Interaction.Triggers>
                         <i:EventTrigger EventName="Click">
                             <behaviors:ProcessStartAction FileName="cmd.exe" Arguments="{qc:Binding '\'/c start \' + $P', P={Binding Source={x:Static root:AppSettingsReader.CreatorSite}, Mode=OneWay}}" CreateNoWindow="True" ThrowException="False"/>
@@ -49,7 +51,7 @@
                     </i:Interaction.Triggers>
                     <mi:FontAwesome Kind="AddressCardRegular"/>
                 </Button>
-                <Button Grid.Column="8" Style="{StaticResource Common.CircleButton}" ToolTipService.ShowDuration="10000" VerticalAlignment="Center" IsTabStop="False">
+                <Button Grid.Column="10" Style="{StaticResource Common.CircleButton}" ToolTipService.ShowDuration="10000" VerticalAlignment="Center" IsTabStop="False">
                     <Button.ToolTip>
                         <StackPanel>
                             <TextBlock Text="{le:Loc Command_Donate}" FontSize="14"/>
