[refactor] AvalonEdit 周りのリファクタリング

--- a/MyPad/Views/MainWindow.xaml
+++ b/MyPad/Views/MainWindow.xaml
@@ -19,6 +19,7 @@
                xmlns:behaviors="clr-namespace:MyPad.Views.Behaviors"
                xmlns:controls="clr-namespace:MyPad.Views.Controls"
                xmlns:helpers="clr-namespace:MyPad.Views.Helpers"
+               d:DataContext="{d:DesignInstance viewModels:MainWindowViewModel}"
                mc:Ignorable="d"
                p:ViewModelLocator.AutoWireViewModel="True"
                Style="{StaticResource App.Window}"
@@ -187,15 +188,15 @@
 
         <Grid Grid.Row="2">
             <Grid.Resources>
-                <s:Double x:Key="HamburgerWidth">48</s:Double>
-                <GridLength x:Key="HamburgerColumnWidth">48</GridLength>
+                <s:Double x:Key="SideContentWidth">48</s:Double>
+                <GridLength x:Key="SideContentColumnWidth">48</GridLength>
                 <helpers:BindingProxy x:Key="Proxy" Data="{Binding Mode=OneWay}"/>
             </Grid.Resources>
 
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" x:Name="SideContentColumn"
-                                  MinWidth="{qc:MultiBinding '$P0 ? $P1 : 0', P0={Binding Settings.System.ShowSideBar, Mode=OneWay}, P1={Binding Source={StaticResource HamburgerWidth}}}"
-                                  MaxWidth="{qc:MultiBinding '$P0 - $P1', P0={Binding ActualWidth, RelativeSource={RelativeSource AncestorType={x:Type Window}}, Mode=OneWay}, P1={Binding Source={StaticResource HamburgerWidth}}}"/>
+                                  MinWidth="{qc:MultiBinding '$P0 ? $P1 : 0', P0={Binding Settings.System.ShowSideBar, Mode=OneWay}, P1={Binding Source={StaticResource SideContentWidth}}}"
+                                  MaxWidth="{qc:MultiBinding '$P0 - $P1', P0={Binding ActualWidth, RelativeSource={RelativeSource AncestorType={x:Type Window}}, Mode=OneWay}, P1={Binding Source={StaticResource SideContentWidth}}}"/>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*" x:Name="MainContentColumn"/>
             </Grid.ColumnDefinitions>
@@ -207,8 +208,8 @@
             </Grid.RowDefinitions>
 
             <m:HamburgerMenu Grid.Column="0" Grid.RowSpan="3" x:Name="SideContent"
-                             Width="{StaticResource HamburgerWidth}"
-                             HamburgerWidth="{StaticResource HamburgerWidth}"
+                             Width="{StaticResource SideContentWidth}"
+                             HamburgerWidth="{StaticResource SideContentWidth}"
                              HamburgerVisibility="Collapsed"
                              Visibility="{qc:Binding '$P ? Visibility.Visible : Visibility.Collapsed', P={Binding Settings.System.ShowSideBar, Mode=OneWay}}"
                              IsTabStop="False"
@@ -222,9 +223,9 @@
                 </i:Interaction.Triggers>
                 <m:HamburgerMenu.ItemTemplate>
                     <DataTemplate DataType="{x:Type m:HamburgerMenuIconItem}">
-                        <Grid Height="{StaticResource HamburgerWidth}">
+                        <Grid Height="{StaticResource SideContentWidth}">
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="{StaticResource HamburgerColumnWidth}"/>
+                                <ColumnDefinition Width="{StaticResource SideContentColumnWidth}"/>
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
                             <Border ToolTip="{Binding Label, Mode=OneWay}" Background="{qc:MultiBinding '$P0 == $P1 ? new SolidColorBrush(Color.FromArgb((byte)204, (byte)0, (byte)120, (byte)215)) : Brushes.Transparent', P0={Binding Mode=OneWay}, P1={Binding Content, ElementName=SideContent, Mode=OneWay}}">
@@ -235,9 +236,9 @@
                 </m:HamburgerMenu.ItemTemplate>
                 <m:HamburgerMenu.OptionsItemTemplate>
                     <DataTemplate DataType="{x:Type m:HamburgerMenuIconItem}">
-                        <Grid Height="{StaticResource HamburgerWidth}">
+                        <Grid Height="{StaticResource SideContentWidth}">
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="{StaticResource HamburgerColumnWidth}"/>
+                                <ColumnDefinition Width="{StaticResource SideContentColumnWidth}"/>
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
                             <Border ToolTip="{Binding Label, Mode=OneWay}" Background="Transparent">
@@ -402,7 +403,7 @@
                                           IsHeaderPanelVisible="{qc:MultiBinding '$P0 || $P1.CompareTo(1) == 1', P0={Binding Settings.System.ShowSingleTab, Mode=OneWay}, P1={Binding Items.Count, RelativeSource={RelativeSource Self}, Mode=OneWay}}"
                                           ShowDefaultAddButton="False"
                                           ShowDefaultCloseButton="True"
-                                          SelectionChanged="DraggableTabControl_SelectionChanged">
+                                          SelectionChanged="MainContent_SelectionChanged">
                 <dr:TabablzControl.InterTabController>
                     <dr:InterTabController InterTabClient="{Binding InterTabClient, RelativeSource={RelativeSource AncestorType={x:Type Window}}, Mode=OneWay}"/>
                 </dr:TabablzControl.InterTabController>
@@ -443,7 +444,7 @@
                 </dr:TabablzControl.HeaderItemTemplate>
                 <dr:TabablzControl.ItemContainerStyle>
                     <Style TargetType="{x:Type dr:DragablzItem}" BasedOn="{StaticResource Default.DragablzItem}">
-                        <EventSetter Event="MouseRightButtonDown" Handler="DragablzItem_MouseRightButtonDown"/>
+                        <EventSetter Event="MouseRightButtonDown" Handler="MainContentItem_MouseRightButtonDown"/>
                         <Setter Property="ToolTipService.IsEnabled" Value="{qc:Binding '!$P', P={Binding IsNewFile, Mode=OneWay}}"/>
                         <Setter Property="ToolTip" Value="{qc:MultiBinding '($P0 ? \'[R/O] \' : null) + $P1', P0={Binding IsReadOnly, Mode=OneWay}, P1={Binding FileName, Mode=OneWay}}"/>
                         <Style.Triggers>
@@ -521,6 +522,7 @@
                             <controls:TextEditor.Style>
                                 <Style TargetType="{x:Type controls:TextEditor}" BasedOn="{StaticResource Default.TextEditor}">
                                     <EventSetter Event="Loaded" Handler="TextEditor_Loaded"/>
+                                    <EventSetter Event="Unloaded" Handler="TextEditor_Unloaded"/>
                                     <Setter Property="Settings"         Value="{Binding DataContext.Settings.TextEditor, RelativeSource={RelativeSource AncestorType={x:Type Window}}, Mode=OneWay}"/>
                                     <Setter Property="Document"         Value="{Binding Document, Mode=OneWay}"/>
                                     <Setter Property="IsReadOnly"       Value="{Binding IsReadOnly, Mode=TwoWay}"/>
