--- a/MyPad/Views/Regions/TerminalView.xaml
+++ b/MyPad/Views/Regions/TerminalView.xaml
@@ -31,7 +31,7 @@
             </i:Interaction.Triggers>
         </TextBox>
         <Grid Grid.Row="1" ge:GridEx.ColumnDefinition="Auto, *">
-            <Label Grid.Column="0" Content="{Binding OutputLastLine.Value, Mode=OneWay}"/>
+            <TextBlock Grid.Column="0" Text="{Binding OutputLastLine.Value, Mode=OneWay}" VerticalAlignment="Center"/>
             <!-- WARN: このコントロール名は MainWindow から FindName で検索される -->
             <ComboBox Grid.Column="1" x:Name="ScriptInputField"
                       ItemsSource="{Binding ScriptHistories, Mode=OneWay}"
