--- a/MyPad/Views/MainWindow.xaml
+++ b/MyPad/Views/MainWindow.xaml
@@ -16,9 +16,9 @@
                xmlns:ae="http://icsharpcode.net/sharpdevelop/avalonedit"
                xmlns:s="clr-namespace:System;assembly=System.Runtime"
                xmlns:viewModels="clr-namespace:MyPad.ViewModels"
+               xmlns:views="clr-namespace:MyPad.Views"
                xmlns:behaviors="clr-namespace:MyPad.Views.Behaviors"
                xmlns:controls="clr-namespace:MyPad.Views.Controls"
-               xmlns:helpers="clr-namespace:MyPad.Views.Helpers"
                d:DataContext="{d:DesignInstance {x:Type viewModels:MainWindowViewModel}}"
                mc:Ignorable="d"
                p:ViewModelLocator.AutoWireViewModel="True"
@@ -190,7 +190,7 @@
             <Grid.Resources>
                 <s:Double x:Key="SideContentWidth">48</s:Double>
                 <GridLength x:Key="SideContentColumnWidth">48</GridLength>
-                <helpers:BindingProxy x:Key="Proxy" Data="{Binding Mode=OneWay}"/>
+                <views:BindingProxy x:Key="Proxy" Data="{Binding Mode=OneWay}"/>
             </Grid.Resources>
 
             <Grid.ColumnDefinitions>
